--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,10 @@
 /* main global Bootstrap CSS */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+body { 
+  background-color: #fffcfe;
+}
+
 .md-container {
   max-width: 820px;
   padding-top: 2.75rem;
@@ -28,6 +32,7 @@
   top: 0px;
   left: 0px;
   background-color: black;
+  width: 100%;
 }
 .navigation a {
   display: block;
@@ -37,7 +42,7 @@
   color: white;
 }
 .navigation a:hover {
-  background-color: orangered;
+  background-color: #28a745;
   text-decoration: none;
 }
 
@@ -50,4 +55,10 @@
 .wrap-viewer .nfte--loaded .nfte__media {
   max-height: fit-content;
   aspect-ratio: auto;
+}
+
+.nft-title { 
+  color: #04080c;
+  font-size: 1.17rem;
+  font-style: italic;
 }
