add more nav styles and more page top padding

--- a/style/index.css
+++ b/style/index.css
@@ -7,7 +7,7 @@ body {
 
 .md-container {
   max-width: 820px;
-  padding-top: 2.75rem;
+  padding-top: 3.8rem;
 }
 
 .cntr-footer {
@@ -31,9 +31,7 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  background-color: black;
   width: 100%;
-  padding: 2px;
 }
 .navigation a {
   display: block;
@@ -45,6 +43,9 @@ body {
 .navigation a:hover {
   background-color: #28a745;
   text-decoration: none;
+}
+.navigation .navbar-dark .navbar-nav .nav-link {
+  color: rgba(242,242,252,1);
 }
 
 .wrap-viewer .nfte { 
