--- a/style/index.css
+++ b/style/index.css
@@ -7,8 +7,11 @@ body {
 
 .md-container {
   max-width: 820px;
-  padding-top: 3.8rem;
+  padding-top: 4.2rem;
 }
+
+.span1 { padding-left: 4px; display: inline-block; word-break: break-all; }
+.span2 { padding-left: 12px; display: inline-block; word-break: break-all; }
 
 .cntr-footer {
   height: 80px;
@@ -63,4 +66,8 @@ body {
   color: #04080c;
   font-size: 1.17rem;
   font-style: italic;
+}
+
+.break-text {
+  word-break: break-all;
 }
